# WhiteAnalysis

./: .gitignore  .pre-commit-config.yaml  Abstract.txt  README.md  pyproject.toml
.github/workflows/: codeql.yml
Materials/: Bearman 2005 Doormen.docx  Bothner Stuart and White 2004.docx  Leifer and White 1986 excerpt_final.docx  Leifer and White 1987.docx  Mische and White 1998.docx  White 1981a.docx  White 2002 Markets from Networks.docx  White 2008 Identity and Control.docx
inputs/: cases.json  paper.json
paper_output/gpt-4o-mini/Bearman2005Doormen/: case1_Bearman2005Doormen.docx  case1_Bearman2005Doormen.html
paper_output/gpt-4o-mini/BothnerStuartandWhite2004/: case1_BothnerStuartandWhite2004.docx  case1_BothnerStuartandWhite2004.html
paper_output/gpt-4o-mini/LeiferandWhite1986excerpt_final/: case1_LeiferandWhite1986excerpt_final.docx  case1_LeiferandWhite1986excerpt_final.html
paper_output/gpt-4o-mini/LeiferandWhite1987/: case1_LeiferandWhite1987.docx  case1_LeiferandWhite1987.html
paper_output/gpt-4o-mini/MischeandWhite1998/: case1_MischeandWhite1998.docx  case1_MischeandWhite1998.html
paper_output/gpt-4o-mini/White1981a/: case1_White1981a.docx  case1_White1981a.html
paper_output/gpt-4o-mini/White1981b/: case1_White1981b.docx  case1_White1981b.html
paper_output/gpt-4o-mini/White2002MarketsfromNetworks/: case1_White2002MarketsfromNetworks.docx  case1_White2002MarketsfromNetworks.html
src/whiteanalysis/: file_handling.py  html_creation.py  main.py  paper.py  pdf_handling.py  prompts.py  utils.py  word_creation.py
(+12 files in other folders)
